# appex-color

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain.cmake
.github/workflows/: build.yaml
cmake/: libmodbus.patch  lvgl_png_color.patch
cmake/modbus/: CMakeLists.txt  config.h.in  modbus-version.h.in
include/: btn.h  comm.h  common.h  conf.h  global_var.h  gpio.h  graph.h  lcd.h  load.h  lv_conf.h  lv_drv_conf.h  point.h  read.h  show.h  timer.h
src/: btn.c  comm.c  conf.c  gpio.c  graph.c  lcd.c  load.c  main.c  point.c  read.c  show.c  timer.c
src/blob/: NUM_0.c  NUM_1.c  NUM_2.c  NUM_3.c  NUM_4.c  NUM_5.c  NUM_6.c  NUM_7.c  NUM_8.c  NUM_9.c  NUM_MINUS.c
